# pytorch-deep-learning

./: .gitignore  01_pytorch_workflow.ipynb  02_pytorch_classification.ipynb  03_pytorch_computer_vision.ipynb  06_pytorch_transfer_learning.ipynb  07_pytorch_experiment_tracking.ipynb  08_pytorch_paper_replicating.ipynb  hello.py  pyproject.toml
extras/exercises/: 00_pytorch_fundamentals_exercises.ipynb  01_pytorch_workflow_exercises.ipynb  02_pytorch_classification_exercises.ipynb  03_pytorch_computer_vision_exercises.ipynb
extras/solutions/: 02_pytorch_classification_exercise_solutions.ipynb
going_modular/: 05_pytorch_going_modular_cell_mode.ipynb  05_pytorch_going_modular_script_mode.ipynb
going_modular/going_modular/: get_data.py  predict.py  train.py  utils.py
